--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 <input type="button" onclick="options();" value="Options"><br>
             </div>
         </div>
+
+        <div class="headerText panel-top">
+            Dots <em>and</em> Boxes - Made by Kerem & Vibbodh 10d
+        </div>
     
         <div id="howToPanel" class="panel how-to-panel">
             <div class="panel-top">
